Bug 321998 - ktp-contactlist crash with libkpeople
Summary: ktp-contactlist crash with libkpeople
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: contactlist (other bugs)
Version First Reported In: 0.6.2
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-05 14:49 UTC by Johannes Hirte
Modified: 2013-07-05 14:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Hirte 2013-07-05 14:49:55 UTC
Application: ktp-contactlist (0.6.2)
KDE Platform Version: 4.10.90
Qt Version: 4.8.4
Operating System: Linux 3.10.0-00714-gc67e1df x86_64
Distribution: "Gentoo Base System release 2.2"

-- Information about the crash:
- What I was doing when the application crashed:

when build with libkpeople support, ktp-contactlist crash on start

The crash can be reproduced every time.

-- Backtrace:
Application: KDE Telepathy Contact List (ktp-contactlist), signal: Segmentation fault
Using host libthread_db library "/lib64/libthread_db.so.1".
[KCrash Handler]
#5  0x00000000018dcee8 in ?? ()
#6  0x00007fa30ba57ef0 in QObject::connect (sender=0x7fa30a048678, signal=0x7fa30cd42b03 "2contactChanged(QString)", receiver=0x1825610, method=0x7fa30cd42ae8 "1onContactChanged(QString)", type=Qt::AutoConnection) at kernel/qobject.cpp:2550
#7  0x00007fa30cd2cae0 in QObject::connect (this=0x1825610, asender=0x7fa30a048678, asignal=0x7fa30cd42b03 "2contactChanged(QString)", amember=0x7fa30cd42ae8 "1onContactChanged(QString)", atype=Qt::AutoConnection) at /usr/include/qt4/QtCore/qobject.h:339
#8  0x00007fa30cd2c917 in KPeople::DataSourceWatcher::DataSourceWatcher (this=0x1825610, parent=0x1824b60) at /var/tmp/portage/net-libs/libkpeople-9999/work/libkpeople-9999/src/datasourcewatcher.cpp:36
#9  0x00007fa30cd2e3c0 in KPeople::PersonsModel::PersonsModel (this=0x1824b60, parent=0x1824660) at /var/tmp/portage/net-libs/libkpeople-9999/work/libkpeople-9999/src/personsmodel.cpp:104
#10 0x00007fa30ce371ff in KTp::ContactsModel::ContactsModel (this=0x1824660, parent=0x17492c0) at /var/tmp/portage/net-im/ktp-common-internals-9999/work/ktp-common-internals-9999/KTp/Models/contacts-model.cpp:65
#11 0x000000000041f0a8 in ContactListWidget::ContactListWidget (this=0x17492c0, parent=0x177c910) at /var/tmp/portage/net-im/ktp-contact-list-9999/work/ktp-contact-list-9999/contact-list-widget.cpp:74
#12 0x000000000044406e in Ui_MainWindow::setupUi (this=0x17d9fc0, MainWindow=0x17d9f90) at /var/tmp/portage/net-im/ktp-contact-list-9999/work/ktp-contact-list-9999_build/ui_main-widget.h:89
#13 0x000000000043e40e in MainWidget::MainWidget (this=0x17d9f90, parent=0x0) at /var/tmp/portage/net-im/ktp-contact-list-9999/work/ktp-contact-list-9999/main-widget.cpp:130
#14 0x000000000043dd52 in main (argc=1, argv=0x7fffd03ed4e8) at /var/tmp/portage/net-im/ktp-contact-list-9999/work/ktp-contact-list-9999/main.cpp:59

Reported using DrKonqi
Comment 1 David Edmundson 2013-07-05 14:57:59 UTC
Thanks.
Can you update and test again.
Comment 2 David Edmundson 2013-07-05 14:58:04 UTC
Git commit 0344ceeebc4c67874761f1d960c05ec3eca25b28 by David Edmundson.
Committed on 05/07/2013 at 14:56.
Pushed by davidedmundson into branch 'master'.

Fix crash which can result in invalid presencePlugin

M  +2    -0    src/personpluginmanager.cpp

http://commits.kde.org/libkpeople/0344ceeebc4c67874761f1d960c05ec3eca25b28