Fix crash which can result in invalid presencePlugin

BUG: 321998